Changelog
=========

1.2 - Unreleased
----------------

- Rewrite ``handle_modified`` subscriber to notify ObjectModifiedEvent,
  and pass canonical object as event-description. This replaces the non-working
  semaphore.  Fixes #65
  [saily]

- Switch to a cloned user with a global Editor role to allow synchronization
  of language independant fields of other object (which the current user could
  not have permission to) when modifying an object.  Fixes #66
  [saily]

- We may need to know the language from a object that is not ITranslatable
  [ramon]

1.1 - 2013-06-19
----------------

- Minor PEP8 errors
  [ramon]

1.0 - 2013-04-16
----------------

- Removing ITG usage to ITranslationManager
  [pysailor]
- Added a test for adding multilingual behavior through the web
  [pysailor]


1.0rc1 - 2013-01-26
-------------------

- Adding relationfield to test profile
  [ramon]

- PEP8 cleanup
  [saily]

- Correct import and add new dependency for ``plone.supermodel.model``
  because ``plone.directives.form`` 2.0 does no longer depend on grok.
  [saily]


1.0b3 - 2012-10-04
------------------

- Added tests [sneridagh]
- Cleaning subscribers [ramon]


1.0b2 - 2012-7-9
----------------

- Enable Realtedfields copying the correct translated item when is language independent [ramon]
- Handle case of behaviors where attributes have never been set [do3cc]


1.0b1 - 2012-4-3
----------------

- Schema editor plugin to enable language indepedent fields TTW [ramon]
- Language independent field implementation [ramon]
- Supermodel, grok and native language independent field markers [ramon]
- ILanguage implementation [awello]